Added bootstrap support, changed snapshot conventions
Added support for bootstrapping IBM i systems, preparing them for open source package support.
Changed naming conventions for snapshots, and corresponding .repo files
Changed some test parameters
Made further changes for Java 8 compatibility